Fix slider background color

--- a/napari_aicssegmentation/styles/main.qss
+++ b/napari_aicssegmentation/styles/main.qss
@@ -130,3 +130,7 @@ CollapsibleBox .QFrame#contentBox {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
 }
+
+CollapsibleBox #slider {
+    background-color: transparent;
+}
