Feature/pg 7 hard-coded UI (#53)
* Add workflow step title

* Add progress bar widget

* Make progress bar chunk thinner

* Add Run all button

* Start writing _add_workflow_steps

* Add first category of steps with placeholder content

* Add gear icon asset

* Make collapsible box widget closed by default

* Add unstyled widgets

* Style workflow step categories and refine collapsible box styling

* Tweak title box in collapsible box widget

* Try to add tick marks to progress bar

* Add tick marks to progress bar

* Add magicgui FloatSliders

* Turn _form_layout into reusable widget

* Update CollapsibleBox tests to reflect default closed state

* Turn dropdown_row into a view util

* Make dropdown_row take in a string label

* Add a dropdown

* Make second column contents in a Form auto-expand

* Fix slider background color

* Add workflow diagram popup

* Pin black version to 19.10b0

* Fix linting error

* Fix typo in workflow_select_view_test file name

* Create test file

* Group event handlers together

* Make layout a class property

* Add blank tests

* Fix linting error

* Fix lint error

* Add comments

* Open first page by default

* Create a UiUtils class and put dropdown_row in it

* Move CollapsibleBox doc block into class

* Use Directories util in CollapsibleBox

--- a/napari_aicssegmentation/styles/main.qss
+++ b/napari_aicssegmentation/styles/main.qss
@@ -43,6 +43,51 @@ QLabel#workflowSelectionTitle {
     font-weight: bold;
 }
 
+QLabel#categoryLabel {
+    font-size: 12px;
+    color: #82868b;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+#workflowTitle QLabel {
+    padding-left: 0px;
+    padding-right: 0px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+#infoButton {
+    background-color: transparent;
+}
+
+#infoButton:hover {
+    background-color: #333941;
+}
+
+QProgressBar {
+    border-radius: 8px;
+    padding-left: 6px;
+    padding-right: 6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    height: 12px;
+}
+
+QProgressBar:chunk {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+#progressLabels {
+    margin-bottom: 0.5em;
+}
+
+#progressLabels QLabel {
+    color: #82868b;
+    font-size: 8px;
+}
+
 #columnLabels QLabel {
     font-size: 12px;
     font-weight: bold;
@@ -62,13 +107,9 @@ QPushButton:disabled {
     background-color: #333941;
 }
 
-#workflowSelectView QComboBox { 
-    min-width: 320px;
-}
-
 CollapsibleBox .QFrame {
     background-color: #5a626d;
-    border-radius: 2px;
+    border-radius: 3px;
     border-color: #6d7075;
     border-width: 0.5px;
     border-style: solid;
@@ -86,7 +127,7 @@ CollapsibleBox QFrame#titleBoxClosed:hover {
 
 CollapsibleBox QFrame:disabled {
     background-color: #333942;
-    border-radius: 2px;
+    border-radius: 3px;
     border-color: #333942;
     color: #7C848A;
 }
@@ -94,4 +135,10 @@ CollapsibleBox QFrame:disabled {
 CollapsibleBox .QFrame#contentBox {
     background-color: #30353d;
     border-top: 0px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+CollapsibleBox #slider {
+    background-color: transparent;
 }
