--- a/napari_aicssegmentation/styles/main.qss
+++ b/napari_aicssegmentation/styles/main.qss
@@ -105,6 +105,7 @@ QLabel#step3InstructionsDisabled {
 
 QPushButton:disabled { 
     background-color: #333941;
+    color: #5a5a5a;
 }
 
 CollapsibleBox .QFrame {
